fix style errors